# lang-benchmarks

./: .gitignore  Cargo.toml  FillOrder.hs  README.md  compare-1-2-pass-opt.sh  compare-1-2-pass.sh  compare-hs-q.sh  compare-hs-rs.sh  compare-hs-structs.sh  fill-order.q  fill-order.rs  input1.txt  input2.txt  lang-benchmarks.cabal
